--- a/src/common/styles/Container.module.css
+++ b/src/common/styles/Container.module.css
@@ -6,4 +6,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
+
+.padding {
+    padding: 55px 0;
+}
+
