--- a/src/contacts/form/input/Input.module.css
+++ b/src/contacts/form/input/Input.module.css
@@ -1,3 +1,13 @@
 .container {
+    width: 100%;
+    height: 100%;
+}
 
+.container_inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 25vh;
+    margin-bottom: 15px;
 }
