--- a/src/skills/skil/Skill.module.css
+++ b/src/skills/skil/Skill.module.css
@@ -12,3 +12,35 @@
     align-items: center;
     text-align: center;
 }
+
+
+@media (min-width: 360px) and (max-width: 390px) {
+    .skill {
+        margin: 0 0 10px 0;
+        padding-bottom: 5px;
+    }
+}
+
+/*media (min-width: 1200px) {*/
+
+/*}*/
+
+/*!* Portrait tablets and medium desktops *!*/
+/*media (min-width: 992px) and (max-width: 1199px) {*/
+
+/*}*/
+
+/*!* Portrait tablets and small desktops *!*/
+/*media (min-width: 768px) and (max-width: 991px) {*/
+
+/*}*/
+
+/*!* Landscape phones and portrait tablets *!*/
+/*media (max-width: 767px) {*/
+
+/*}*/
+
+/*!* Landscape phones and smaller *!*/
+/*media (max-width: 480px) {*/
+
+/*}*/
