--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -3,7 +3,6 @@
     height: 100vh;
 }
 
-
 .container {
     flex-direction: column;
     justify-content: space-between;
@@ -17,5 +16,15 @@
 .contacts {
     border: 1px solid;
     padding-bottom: 15px;
-    min-width: 350px;
+    width: 450px;
+}
+
+@media (min-width: 360px) and (max-width: 390px) {
+    .contactsBlock {
+        height: 40vh;
+    }
+    .contacts {
+        width: 200px;
+
+    }
 }
