--- a/src/contacts/form/Form.module.css
+++ b/src/contacts/form/Form.module.css
@@ -1,6 +1,6 @@
-.formBlock {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+/*.formBlock {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*}*/
