--- a/src/button/Button.module.css
+++ b/src/button/Button.module.css
@@ -1,13 +1,66 @@
-.sendBtn {
-    background-color: darksalmon;
-    padding: 10px 15px;
+.default {
     border-radius: 10px;
-    border: 1px silver;
+    margin: 10px 0 10px 0;
 }
 
-.ads {
-    background-color: gold;
-    padding: 10px 15px;
-    border-radius: 10px;
-    border: 1px silver;
+.red {
+    border-radius: 5px;
+    width: 35px;
+    height: 25px;
+    padding: 1px 12px 1px 12px;
 }
+
+/*button {*/
+/*    position: relative;*/
+/*    margin-left: 10px;*/
+/*    padding: 5px 25px;*/
+/*    overflow: hidden;*/
+/*    cursor: pointer;*/
+/*}*/
+
+/*button::after {*/
+/*    position: absolute;*/
+/*    display: block;*/
+/*    content: "";*/
+/*    left: -130%;*/
+/*    top: 0;*/
+/*    height: 100%;*/
+/*    width: 20%;*/
+/*    transform: skew(45deg);*/
+/*    !*background-color: #3f643f;*!*/
+/*    opacity: 0.7;*/
+
+/*    z-index: 14;*/
+/*}*/
+
+/*button:hover::after {*/
+/*    animation: blink 0.35s ease;*/
+/*}*/
+
+/*button:hover:after {*/
+/*    display: block;*/
+/*    content: "";*/
+/*    position: absolute;*/
+/*    left: -100vw;*/
+/*    top: 0;*/
+/*    height: 100vh;*/
+/*    width: 300vw;*/
+/*    background-color: #ffffff;*/
+/*    opacity: 0.2;*/
+/*    z-index: 7;*/
+/*}*/
+
+/*button:hover::before {*/
+/*    display: block;*/
+/*    content: "";*/
+/*    position: absolute;*/
+/*    left: -100vw;*/
+/*    top: 0;*/
+/*    height: 100vh;*/
+/*    width: 300vw;*/
+/*    background-color: #ffffff;*/
+/*    opacity: 0.2;*/
+/*    z-index: 7;*/
+/*}*/
+
+
