--- a/src/projects/myProjects/MyProjectSocialNetwork.module.css
+++ b/src/projects/myProjects/MyProjectSocialNetwork.module.css
@@ -13,13 +13,16 @@
     justify-content: center;
 }
 
-
 .myProject {
     background-color: darkkhaki;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+}
+
+.socialBtn {
+    background-color: gold;
 }
 
 
