--- a/src/projects/myProjects/MyProjectsTodolist.module.css
+++ b/src/projects/myProjects/MyProjectsTodolist.module.css
@@ -4,7 +4,7 @@
 }
 
 .imgContainer {
-    background-color: teal;
+    background-color: silver;
     height: 350px;
     width: 100%;
     display: flex;
