--- a/src/button/Button.module.css
+++ b/src/button/Button.module.css
@@ -1,5 +1,5 @@
 .finalClass {
-    background-color: deepskyblue;
+    background-color: firebrick;
     border: 1px solid white;
     padding: 10px 10px;
     border-radius: 3px;
