--- a/src/common/styles/Container.module.css
+++ b/src/common/styles/Container.module.css
@@ -13,9 +13,9 @@
     padding: 55px 0;
 }
 
-@media (min-width: 360px) and (max-width: 390px)  {
-    .padding {
-        padding: 10px 0;
-    }
-}
+/*@media (min-width: 360px) and (max-width: 390px)  {*/
+/*    .padding {*/
+/*        padding: 10px 0;*/
+/*    }*/
+/*}*/
 
