--- a/src/navbar/Navbar.module.css
+++ b/src/navbar/Navbar.module.css
@@ -1,6 +1,10 @@
 .navbar {
-    border: 1px solid red;
     width: 300px;
     display: flex;
     justify-content: space-between;
+}
+
+.navbar a {
+    color: white;
+    text-decoration: none;
 }
