--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -1,30 +1,51 @@
+
 .contactsBlock {
     background-color: cadetblue;
-    height: 100vh;
+    min-height: 40vh;
 }
 
 .container {
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
 }
 
 .title {
     background-color: darksalmon;
 }
 
-.contacts {
-    border: 1px solid;
-    padding-bottom: 15px;
-    width: 450px;
+.submitBtn {
+    padding: 10px 20px;
+    background-color: deepskyblue;
 }
 
-@media (min-width: 360px) and (max-width: 390px) {
-    .contactsBlock {
-        height: 40vh;
-    }
-    .contacts {
-        width: 200px;
+.contactsForm {
+    width: 50%;
+    background-color: firebrick;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.contactsForm input, .contactsForm textarea {
+    width: 100%;
+}
+
+
+@media screen and (max-width: 825px) {
+    .contactsForm {
+        width: 90%;
     }
 }
+
+
+/* margin-bottom: 15px;
+
+
+/*@media (min-width: 360px) {*/
+/*    .contactsBlock {*/
+/*        height: 40vh;*/
+/*    }*/
+/*    .contacts {*/
+/*        width: 150px;*/
+/*    }*/
+/*}*/
