--- a/src/distantWork/DistantWork.module.css
+++ b/src/distantWork/DistantWork.module.css
@@ -1,5 +1,5 @@
 .mainBlock {
-    height: 20vh;
+    min-height: 30vh;
     background-color: burlywood;
 }
 
@@ -7,8 +7,10 @@
     flex-direction: column;
 }
 
+.title {
+    background-color: darkkhaki;
+}
 .text {
-    width: 300px;
     height: 100%;
     display: flex;
     justify-content: space-between;
