--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -1,7 +1,9 @@
+@import './../common/styles/sass/variables';
+
 .header {
     width: 100%;
     height: 80px;
-    background-color: cadetblue;
+    background-color: $bgColor;
     display: flex;
     justify-content: flex-end;
     align-items: center;
