--- a/src/skills/skil/Skill.module.css
+++ b/src/skills/skil/Skill.module.css
@@ -1,12 +1,51 @@
-.icon {
-    height: 60px;
-    width: 60px;
-    background-color: deepskyblue;
+
+.skillOne {
+    color: #4e93e6;
+    height: 100px;
+    width: 100px;
+    background: rgba(255,255,255,0.1);
+    display: block;
+    line-height: 100px;
+    font-size: 30px;
+    box-shadow: -6px 10px 40px rgb(0 0 0 / 6%);
+    text-align: center;
+    transform: rotate(45deg);
+    transform-origin: center;
+    margin-bottom: 30px;
 }
 
+.skillOne:hover {
+    border: 2px solid #CBA5EA;
+    transition: 0.2s;
+}
+.skillOne img:hover {
+    width: 50px;
+    transition: 0.2s;
+}
+
+.skill h3,.description {
+    color: #fff;
+
+
+}
+
+.description {
+    font-family: 'Poppins', sans-serif;
+    font-size: 12px;
+    line-height: 1.8;
+    font-weight: 400;
+}
+
+.imgIcon {
+    width: 30px;
+    height: 40px;
+    transform: rotate(-45deg)
+}
 .skill {
-    width: 250px;
-    background-color: coral;
+    margin-top: 15px;
+    width: 220px;
+    padding: 10px;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,12 +53,12 @@
 }
 
 
-@media (min-width: 360px) and (max-width: 390px) {
-    .skill {
-        margin: 0 0 10px 0;
-        padding-bottom: 5px;
-    }
-}
+/*@media (min-width: 360px) and (max-width: 390px) {*/
+/*    .skill {*/
+/*        margin: 0 0 10px 0;*/
+/*        padding-bottom: 5px;*/
+/*    }*/
+/*}*/
 
 /*media (min-width: 1200px) {*/
 
