--- a/src/skills/skil/Skill.module.css
+++ b/src/skills/skil/Skill.module.css
@@ -1,32 +1,33 @@
 
 .skillOne {
-    color: #4e93e6;
-    height: 100px;
-    width: 100px;
+    padding: 25px;
     background: rgba(255,255,255,0.1);
-    display: block;
-    line-height: 100px;
-    font-size: 30px;
-    box-shadow: -6px 10px 40px rgb(0 0 0 / 6%);
-    text-align: center;
     transform: rotate(45deg);
     transform-origin: center;
+    border: 2px solid transparent;
     margin-bottom: 30px;
+}
+
+.skillOneIcon {
+    background-position: center;
+    transform: rotate(-45deg);
+    width: 50px;
+    height: 50px;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .skillOne:hover {
     border: 2px solid #CBA5EA;
     transition: 0.2s;
 }
-.skillOne img:hover {
-    width: 50px;
-    transition: 0.2s;
-}
 
-.skill h3,.description {
+.skill h3 {
     color: #fff;
-
-
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 22px;
+    line-height: 1.2;
+    font-weight: 400;
 }
 
 .description {
@@ -34,13 +35,10 @@
     font-size: 12px;
     line-height: 1.8;
     font-weight: 400;
+    color: #fff;
+
 }
 
-.imgIcon {
-    width: 30px;
-    height: 40px;
-    transform: rotate(-45deg)
-}
 .skill {
     margin-top: 15px;
     width: 220px;
