--- a/src/common/components/title/Title.module.scss
+++ b/src/common/components/title/Title.module.scss
@@ -1,31 +1,37 @@
 @import './../../styles/sass/variables';
+@import './../../styles/sass/mixins';
 
 .title {
-  margin: 0;
+  @include text($TitleFontFamily,300,45px,1.2);
+  letter-spacing: 0;
+  line-height: 1.15789em;
+  word-wrap: break-word;
   position: relative;
 
-  .text {
-    font-family: 'Josefin Sans', sans-serif;
-    margin: 0;
-    font-weight: 300;
-    color: $textColor;
-    text-transform: capitalize;
-    font-size: 36px;
-    line-height: 1.2;
-    letter-spacing: 5px;
+  & h2 {
+    margin: 0 0 1rem;
   }
-  &::before {
-    position: absolute;
+
+  //&::before {
+  //  content: "";
+  //  position: absolute;
+  //  background-color: #3f4551;
+  //  width: 170px;
+  //  height: 2px;
+  //  bottom: -2rem;
+  //  left: 50%;
+  //  transform: translateX(-50%);
+  //}
+
+  &::after {
     content: "";
+    position: absolute;
+    background-color: $mainTextColor;
     width: 55px;
     height: 2px;
-    background-color: $primaryColor;
-    bottom: -20px;
+    bottom: -1.5rem;
     left: 50%;
-    transform: translate(-50%, 50%);
+    transform: translateX(-50%);
   }
-
 }
-
-
 
