--- a/src/common/styles/sass/variables.scss
+++ b/src/common/styles/sass/variables.scss
@@ -4,3 +4,9 @@ $bgColor: #1f1f20;
 $bgSecondColor: #252527;
 $TitleFontFamily: 'Josefin Sans', sans-serif;
 $TextFontFamily: 'Poppins', sans-serif;
+
+$mainTextColor: #CBA5EA;
+$secondTextColor: white;
+$mainbackgroundColor: black;
+$secondbackgroundColor: #1e1723;
+$mainFontFamily: 'Syne Mono', monospace;
