--- a/src/skills/Skills.module.scss
+++ b/src/skills/Skills.module.scss
@@ -12,15 +12,16 @@
 .skillsContainer {
     flex-direction: column;
     justify-content: flex-start;
+    width: 85%;
 }
 
 .skills {
-    border: 1px solid;
+    //border: 1px solid;
     width: 100%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-top: 85px;
+    margin-top: 2.5rem;
     box-sizing: border-box;
 }
 
