--- a/src/main/Main.module.scss
+++ b/src/main/Main.module.scss
@@ -2,32 +2,106 @@
 @import './../common/styles/sass/mixins';
 
 .mainBlock {
-    min-height: 70vh;
-    background-color: $bgSecondColor;
-    .text {
-        @include text($TitleFontFamily,400,22px,1.2);
-        width: 500px;
-        .text span {
+  min-height: 70vh;
+  background-color: $bgSecondColor;
+
+  .text {
+    @include text($TitleFontFamily, 400, 22px, 1.2);
+    @include flex(column, flex-start, flex-start, nowrap);
+    span {
+
+      font-size: 22px;
+
+      &:nth-child(2) {
+
+        @include text($TitleFontFamily, 700, 50px, 1.2);
+        letter-spacing: 5px;
+        margin: 10px 0;
+
+        span {
+          @media screen and (max-width: 518px) {
+            @include text($TitleFontFamily, 700, 30px, 1.2);
+          }
+          @include text($TitleFontFamily, 700, 50px, 1.2);
+          letter-spacing: 5px;
+          position: relative;
+          z-index: 0;
+          display: inline-block;
+
+          &:before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 20px;
+            background-color: $primaryColor;
+            bottom: 0;
+            z-index: -1;
+            @media screen and (max-width: 518px) {
+              height: 10px;
+            }
+
+          }
         }
-        .text h1 {
-            color: $textColor;
-        }
-        .text p {
-          color: $textColor;
-        }
+      }
     }
 
-    .photo {
-        @include image(cover,center,repeat);
+    h1 {
+      @include text($TitleFontFamily, 400, 28px, 1.8);
+      margin: 0;
+
+    }
+
+    //@media screen and (max-width: 1143px) {
+    //    align-items: center;
+    //}
+  }
+
+  .animation {
+    width: 250px;
+    color:white;
+    font-size: 22px;
+    font-family: 'Marck Script', cursive;
+    white-space:nowrap;
+    overflow:hidden;
+    -webkit-animation: type 4s steps(50, end);
+    animation: type 4s steps(50, end);
+  }
+  .photo {
+    @include image(cover, center, repeat);
+    position: relative;
+    margin-right: 38px;
+    z-index: 1;
+    border-radius: 8px;
+    box-sizing: border-box;
+  } .image {
         height: 400px;
         width: 275px;
-        border-radius: 8px;
-    }
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        &:before {
+          content: "";
+          position: absolute;
+          width: 102%;
+          height: 110%;
+          border: 5px solid  $primaryColor;
+          left: 15px;
+          top: -30px;
+          z-index: -1;
+        }
+      }
+
+  }
+
+
+
+@keyframes type{
+  from { width: 0; }
 }
 
-
-
-
+@-webkit-keyframes type{
+  from { width: 0; }
+}
 
 /*@media (min-width: 360px)  {*/
 /*    .text {*/
