--- a/src/projects/Projects.module.scss
+++ b/src/projects/Projects.module.scss
@@ -14,18 +14,18 @@
       column-count: 4;
       column-gap: 1rem;
       margin-top: 2.5rem;
-      //@media only screen and (max-width: 480px) {
-      //  column-count: 1;
-      //  margin: 3.75rem 1.25rem 0;
-      //}
-      //@media only screen and (min-width: 481px) and (max-width: 620px) {
-      //  column-count: 2;
-      //  margin: 3.75rem 1.25rem 0;
-      //}
-      //@media only screen and (min-width: 621px) and (max-width: 1023px) {
-      //  column-count: 3;
-      //  margin: 3.75rem 0 0;
-      //}
+      @media only screen and (max-width: 480px) {
+        column-count: 1;
+        margin: 3.75rem 1.25rem 0;
+      }
+      @media only screen and (min-width: 481px) and (max-width: 620px) {
+        column-count: 2;
+        margin: 3.75rem 1.25rem 0;
+      }
+      @media only screen and (min-width: 621px) and (max-width: 1023px) {
+        column-count: 3;
+        margin: 3.75rem 0 0;
+      }
     }
   }
 }
