--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -1,5 +1,8 @@
+@import './../common/styles/sass/variables';
+
+
 .footer {
-    background-color: gray;
+    background-color: $bgSecondColor;
 }
 
 .padding {
