--- a/src/skills/skil/Skill.module.css
+++ b/src/skills/skil/Skill.module.css
@@ -8,6 +8,8 @@
     margin-bottom: 30px;
 }
 
+
+
 .skillOneIcon {
     background-position: center;
     transform: rotate(-45deg);
@@ -53,6 +55,27 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+}
+
+@media (min-width: 360px) and (max-width: 586px) {
+    .skillOne {
+        padding: 15px;
+        background: rgba(255,255,255,0.1);
+        transform: rotate(45deg);
+        transform-origin: center;
+        border: 1px solid transparent;
+        margin-bottom: 20px;
+    }
+    .skill {
+        margin-top: 35px;
+        width: 150px;
+        padding: 0 10px;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
 }
 
 
