--- a/src/common/styles/sass/variables.scss
+++ b/src/common/styles/sass/variables.scss
@@ -1,6 +1,7 @@
 $textColor: #fff;
 $primaryColor: #CBA5EA;
-$bgColor: #1f1f20;
+$bgColor: #151517;
+$bgColors: #131212;
 $bgSecondColor: #252527;
 $TitleFontFamily: 'Josefin Sans', sans-serif;
 $TextFontFamily: 'Poppins', sans-serif;
