--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -1,37 +1,42 @@
 @import './../common/styles/sass/variables';
+@import './../common/styles/sass/mixins';
 
 
 .footer {
-    background-color: $bgSecondColor;
+  background-color: $bgColor;
 }
 
 .padding {
-    padding: 55px 0 15px 0;
+  padding: 25px 0 15px 0;
 }
 
 .footerContainer {
-    flex-direction: column;
-    justify-content: flex-start;
+  flex-direction: column;
+  justify-content: flex-start;
+
 }
 
 
 .title {
-    background-color: cadetblue;
+  @include text($TitleFontFamily, 400, 25px, 1.2);
+  letter-spacing: 0;
+  line-height: 1.15789em;
+  color: white
 }
 
 .socialIcons {
-    width: 250px;
-    background-color: red;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  width: 250px;
+  background-color: red;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 
 .socialIcon {
-    width: 50px;
-    height: 50px;
-    background-color: silver;
+  width: 50px;
+  height: 50px;
+  background-color: silver;
 }
 
 /*.margin {*/
@@ -39,8 +44,8 @@
 /*}*/
 
 .icon {
-    width: 25px;
-    height: 25px;
+  width: 25px;
+  height: 25px;
 }
 
 /*.footer_text {*/
