--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -2,11 +2,18 @@
 
 .header {
     width: 100%;
-    height: 80px;
-    background-color: $bgColor;
+    height: 50px;
+    background-color: $bgColors;
     display: flex;
     justify-content: flex-end;
+    position: sticky;
     align-items: center;
+    z-index: 5;
+    top: 0;
+    box-sizing: border-box;
+    bottom: 35px;
+    box-shadow: 0px 0px 2px #e4d1f3
+
 }
 
 .navBlock {
