--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -3,16 +3,16 @@
 .header {
     width: 100%;
     height: 50px;
-    background-color: $bgColors;
+    background-color: $bgSecondColor;
     display: flex;
     justify-content: flex-end;
     position: sticky;
     align-items: center;
-    z-index: 5;
+    z-index: 4;
     top: 0;
+    //opacity: 0.8;
     box-sizing: border-box;
-    bottom: 35px;
-    box-shadow: 0px 0px 2px #e4d1f3
+    //box-shadow: 0px 0px 2px #e4d1f3
 
 }
 
