--- a/src/header/Header.module.scss
+++ b/src/header/Header.module.scss
@@ -1,24 +1,41 @@
 @import './../common/styles/sass/variables';
 
 .header {
-    width: 100%;
-    height: 50px;
-    background-color: $bgSecondColor;
-    display: flex;
-    justify-content: flex-end;
-    position: sticky;
-    align-items: center;
-    z-index: 4;
-    top: 0;
-    //opacity: 0.8;
-    box-sizing: border-box;
-    //box-shadow: 0px 0px 2px #e4d1f3
+  width: 100%;
+  background-color: $bgSecondColor;
+  height: 50px;
+  display: flex;
+  justify-content: flex-end;
+  position: sticky;
+  align-items: center;
+  z-index: 4;
+  top: 0;
+  //opacity: 0.8;
+  box-sizing: border-box;
+  //box-shadow: 0px 0px 2px #e4d1f3
 
 }
+//.header {
+//  background-color: $bgSecondColor;
+//  height: 70px;
+//  //display: flex;
+//  flex-direction: row;
+//  justify-content: flex-end;
+//  flex-wrap: nowrap;
+//  position: fixed;
+//  align-items: center;
+//  z-index: 4;
+//  left: 0;
+//  right: 0; //opacity: 0.8;
+//  box-sizing: border-box;
+//  //box-shadow: 0px 0px 2px #e4d1f3
+//
+//}
 
 .navBlock {
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: flex-end;
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
