--- a/src/header/BurgerNav/BurgerNav.module.scss
+++ b/src/header/BurgerNav/BurgerNav.module.scss
@@ -8,7 +8,7 @@
     background-color: $bgSecondColor;
     position: absolute;
     height: 0;
-    padding: 10px;
+    padding: 15px 10px 10px 10px;
     right: 0;
     top: 0;
     left: 0;
@@ -21,15 +21,49 @@
     transition: 0.8s;
     //display: none;
 
+    //a {
+    //  color: white;
+    //  text-decoration: none;
+    //
+    //  &:hover {
+    //    color: $primaryColor;
+    //    font-weight: bold;
+    //  }
+    //}
     a {
-      color: white;
+      position: relative;
+      cursor: pointer;
+      line-height: 1;
+      transition: color .2s ease-out;
       text-decoration: none;
+      color: white;
 
-      &:hover {
+    }
+      a:hover {
         color: $primaryColor;
         font-weight: bold;
       }
+    a:after {
+      display: block;
+      position: absolute;
+      left: 0; /*изменить на right:0;, чтобы изменить направление подчёркивания */
+      width: 0;/*задаём длинну линии до наведения курсора*/
+      height: 3px; /*задаём ширину линии*/
+      background-color: #CBA5EA; /*задаём цвет линии*/
+      content: "";
+      transition: width 0.3s ease-out; /*задаём время анимации*/
+      left: 50%; transform: translateX(-50%);
+
     }
+
+    a:hover:after,
+    a:focus:after {
+      width: 100%; /*устанавливаем значение 100% чтобы ссылка подчёркивалась полностью*/
+    }
+    //.active {
+    //  color: $primaryColor;
+    //  font-weight: bold;
+    //}
 
     //.active {
     //  color: blue
@@ -44,13 +78,37 @@
 
   }
 
+  //.burgerBtn {
+  //  width: 20px;
+  //  height: 20px;
+  //  background-color: #CBA5EA;
+  //  position: absolute;
+  //  top: 25px;
+  //  right: 20px;
+  //}
+
   .burgerBtn {
-    width: 20px;
-    height: 20px;
-    background-color: #CBA5EA;
+    width: 35px;
+    height: 30px;
+    position: relative;
+    z-index:2;
+    overflow: hidden;
+  }
+  .burgerBtn span {
+    width: 35px;
+    height: 2px;
     position: absolute;
-    top: 25px;
-    right: 20px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #f1f1f1;
+    transition: all 0.5s;
+  }
+  .burgerBtn span:nth-of-type(2) {
+    top: calc(50% - 7px);
+  }
+  .burgerBtn span:nth-of-type(3) {
+    top: calc(50% + 7px);
   }
 
   @media screen and (min-width: 466px) {
