--- a/src/common/styles/Container.module.css
+++ b/src/common/styles/Container.module.css
@@ -14,9 +14,9 @@
     position: relative;
 }
 
-/*@media (min-width: 360px) and (max-width: 390px)  {*/
-/*    .padding {*/
-/*        padding: 10px 0;*/
-/*    }*/
-/*}*/
+@media (min-width: 360px) and (max-width: 460px)  {
+    .padding {
+        padding: 45px 0;
+    }
+}
 
