--- a/src/contacts/contactsForm/ContactsForm.module.scss
+++ b/src/contacts/contactsForm/ContactsForm.module.scss
@@ -5,15 +5,16 @@
   box-sizing: border-box;
   align-items: center;
   flex-direction: column;
-  display: flex
+  display: flex;
+  margin-top: 10px;
 }
 
 .input, .textarea {
   font: 400 14px/1.8 'Poppins', sans-serif;
-  height: calc(1.5em + 0.75rem + 2px);
+  height: calc(1.75em + 0.85rem + 2px);
   line-height: 1.5;
-  width: 480px;
-  margin: 10px;
+  width: 580px;
+  margin: 6px;
   background-color: $bgSecondColor;
   border: 1px solid #4a4a4a;
   font-size: 12px;
