--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -7,7 +7,7 @@
 }
 
 .padding {
-  padding: 25px 0 15px 0;
+  padding: 20px 0 25px 0;
 }
 
 .footerContainer {
@@ -20,33 +20,39 @@
 .title {
   @include text($TitleFontFamily, 400, 25px, 1.2);
   letter-spacing: 0;
+  margin: 0;
   line-height: 1.15789em;
   color: white
 }
 
 .socialIcons {
-  width: 250px;
-  background-color: red;
+  padding: 15px 0 15px 0;
+  width: 180px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+
 }
 
 
+.copyright {
+  color: rgba(255, 255, 255, .5)
+}
+
 .socialIcon {
-  width: 50px;
-  height: 50px;
-  background-color: silver;
+  @include image(cover, center, repeat);
+  width: 40px;
+  height: 40px;
+  &:hover {
+    transform: scale(1.2);
+    transition: 0.8s;
+  }
 }
 
 /*.margin {*/
 /*    margin: 0 auto;*/
 /*}*/
 
-.icon {
-  width: 25px;
-  height: 25px;
-}
 
 /*.footer_text {*/
 /*    display: flex;*/
