--- a/src/common/styles/sass/variables.scss
+++ b/src/common/styles/sass/variables.scss
@@ -1,5 +1,5 @@
 $textColor: #fff;
-$primaryColor: #CBA5EA;
+$primaryColor: #cba5ea;
 $bgColor: #151517;
 $bgColors: #131212;
 $bgSecondColor: #252527;
