--- a/src/skills/Skills.module.scss
+++ b/src/skills/Skills.module.scss
@@ -21,7 +21,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-top: 2.5rem;
+    margin-top: 4.5rem;
     box-sizing: border-box;
 }
 
@@ -29,8 +29,9 @@
    .skills {
         margin-top: 10px;
        display: flex;
-       justify-content: space-between;
        flex-wrap: wrap;
+     align-items: center;
+     justify-content: center;
    }
     .skillsBlock{
        min-height: 70vh;
