--- a/src/header/navbar/Navbar.module.scss
+++ b/src/header/navbar/Navbar.module.scss
@@ -1,45 +1,46 @@
 @import './../../common/styles/sass/variables';
 
-
 .navbar {
-    width: 380px;
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
-    flex-wrap: nowrap;
-    a {
-        position: relative;
-        cursor: pointer;
-        line-height: 1;
-        transition: color .2s ease-out;
-        text-decoration: none;
-        color: white;
+  width: 380px;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  flex-wrap: nowrap;
 
-    }
-    a:after {
-        display: block;
-        position: absolute;
-        left: 0; /*изменить на right:0;, чтобы изменить направление подчёркивания */
-        width: 0;/*задаём длинну линии до наведения курсора*/
-        height: 3px; /*задаём ширину линии*/
-        background-color: #CBA5EA; /*задаём цвет линии*/
-        content: "";
-        transition: width 0.3s ease-out; /*задаём время анимации*/
-        left: 50%; transform: translateX(-50%);
+  a {
+    position: relative;
+    cursor: pointer;
+    line-height: 1;
+    transition: color .2s ease-out;
+    text-decoration: none;
+    color: white;
+  }
 
-    }
+  a:after {
+    display: block;
+    position: absolute;
+    width: 0; /*задаём длинну линии до наведения курсора*/
+    height: 3px; /*задаём ширину линии*/
+    background-color: #CBA5EA; /*задаём цвет линии*/
+    content: "";
+    transition: width 0.3s ease-out; /*задаём время анимации*/
+    left: 50%;
+    transform: translateX(-50%);
+  }
 
-    a:hover:after,
-    a:focus:after {
-        width: 100%; /*устанавливаем значение 100% чтобы ссылка подчёркивалась полностью*/
-    }
-    .active {
-        color: $primaryColor;
-        font-weight: bold;
-    }
-    @media screen and (max-width: 466px) {
+  a:hover:after,
+  a:focus:after {
+    width: 100%; /*устанавливаем значение 100% чтобы ссылка подчёркивалась полностью*/
+  }
+
+  .active {
+    color: $primaryColor;
+    font-weight: bold;
+  }
+
+  @media screen and (max-width: 466px) {
     display: none;
-    }
+  }
 }
 
 
