--- a/src/projects/Projects.module.scss
+++ b/src/projects/Projects.module.scss
@@ -1,57 +1,57 @@
 @import './../common/styles/sass/variables';
 @import './../common/styles/sass/mixins';
-
-.projectsBlock {
-  min-height: 100vh;
-  background-color: $bgColor;
-
-  .projectsContainer {
-    @include textPosition(flex, center, wrap);
-    flex-direction: column;
-    align-items: center;
-
-    .projects {
-      column-count: 4;
-      column-gap: 1rem;
-      margin-top: 2.5rem;
-      @media only screen and (max-width: 480px) {
-        column-count: 1;
-        margin: 3.75rem 1.25rem 0;
-      }
-      @media only screen and (min-width: 481px) and (max-width: 620px) {
-        column-count: 2;
-        margin: 3.75rem 1.25rem 0;
-      }
-      @media only screen and (min-width: 621px) and (max-width: 1023px) {
-        column-count: 3;
-        margin: 3.75rem 0 0;
-      }
-    }
-  }
-}
-
-
+//
 //.projectsBlock {
-//  min-height: 80vh;
+//  min-height: 100vh;
 //  background-color: $bgColor;
-//  padding: 55px 0;
 //
 //  .projectsContainer {
+//    @include textPosition(flex, center, wrap);
 //    flex-direction: column;
-//    justify-content: flex-start;
-//    flex-wrap: wrap;
+//    align-items: center;
 //
 //    .projects {
-//      margin-top: 60px;
-//      width: 100%;
-//      display: flex;
-//      justify-content: space-between;
-//      flex-wrap: wrap;
-//      align-items: flex-start;
-//      @media screen and (max-width: 877px) {
-//        justify-content: center;
-//
+//      column-count: 4;
+//      column-gap: 1rem;
+//      margin-top: 2.5rem;
+//      @media only screen and (max-width: 480px) {
+//        column-count: 1;
+//        margin: 3.75rem 1.25rem 0;
+//      }
+//      @media only screen and (min-width: 481px) and (max-width: 620px) {
+//        column-count: 2;
+//        margin: 3.75rem 1.25rem 0;
+//      }
+//      @media only screen and (min-width: 621px) and (max-width: 1023px) {
+//        column-count: 3;
+//        margin: 3.75rem 0 0;
 //      }
 //    }
 //  }
 //}
+
+
+.projectsBlock {
+  min-height: 80vh;
+  background-color: $bgColor;
+  padding: 55px 0;
+
+  .projectsContainer {
+    flex-direction: column;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+
+    .projects {
+      margin-top: 60px;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      @media screen and (max-width: 877px) {
+        justify-content: center;
+
+      }
+    }
+  }
+}
